# rcade-sample-rs

./: Cargo.toml  index.html  rcade.manifest.json  trunk.toml
.github/workflows/: deploy.yaml
app/: Cargo.toml
app/src/: example.rs  hook.rs  lib.rs
host/: Cargo.toml  index.html  worker.js
host/src/: canvas.rs  lib.rs
src/: lib.rs
