[package]
name = "rose-sample-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "DedicatedWorkerGlobalScope",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
] }
wasm-bindgen-futures = "0.4.56"
console_error_panic_hook = "0.1.7"
rand = "0.9.2"
