[package]
name = "rose-sample-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "DedicatedWorkerGlobalScope",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "Performance",
] }
wasm-bindgen-futures = "0.4.56"
console_error_panic_hook = "0.1.7"
rand = "0.9.2"
rcade-plugin-input-classic = "0.2"
bevy = { version = "0.17.3", default-features = false, features = [
    "tonemapping_luts",
    "zstd_rust",
    "bevy_log",
    "bevy_sprite",
    "bevy_window",
    "bevy_pbr",
    "webgl2",
] }
raw-window-handle = { version = "0.6.2", default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wgpu = { version = "26.0.1", features = ["webgl"] }
