[package]
name = "rose-sample-rs-host"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "CssStyleDeclaration",
    "OffscreenCanvas",
] }
wasm-bindgen-futures = "0.4.56"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
